[B]Version v1.3.1[/B]
- Version 1.3.1
- Require v2.1.0 of xbmc.python for Gotham

[B]Version v1.3[/B]
- Version 1.3
- Update for Season 2014 inc. NAB Challenge
- Update README

[B]Version v1.2[/B]
- Restructure plugin to use shared tools
- Fix Round IDs for finals
