@@ -1,2 +1,2 @@
 # This file is generated by a GIT pre-commit hook
-VERSION = '1.3.1'
+VERSION = '1.3.1-1-g11714fc'
